# awesome-llm-resourses

./: .gitignore  LICENSE  README.md  README_template.md  pyproject.toml
awesome_llm_resourses/: __init__.py  cli.py  md_processor.py
documents/: llm-resourses-agent.md  llm-resourses-mcp.md  llm-resourses-rag.md  llm-resourses-search.md
prompt/: llm-resoures-prompt.md
